package com.bev0802.salesaccounting.wholesale.model.enumerator;

public enum OrderStatus {
    NEW,          // Новый заказ
    CONFIRMED,    // Подтвержденный
    PAID,         // Оплаченный
    CANCELLED,     // Отмененный
    SHIPPED       // Отгруженный
}
